kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins-ui
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: master
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: ui
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins-discovery
  namespace: jenkins
spec:
  selector:
    app: master
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slaves
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: master
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: master
        image: jenkins/jenkins:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 50
          timeoutSeconds: 15
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 50
          timeoutSeconds: 15
          periodSeconds: 60
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 300m
            memory: 1500Mi
      volumes:
      - name: jenkins-home
        # Create a persistent disk in gcloud
        gcePersistentDisk:
          pdName: jenkins
          fsType: ext4
          partition: 0
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: jenkins-ui
          servicePort: 8080
